modifiche style e inizio modifiche versione 2

--- a/versione2/index.html
+++ b/versione2/index.html
@@ -27,6 +27,20 @@
                 </ul> 
             </div>
         </div>
+        <style>
+            #MainDisks{
+            background-color: #1E2D3B;
+            }
+                img{
+                 max-width:100%;
+                }
+            li{
+        list-style-type: none;
+        }
+            .singleDisk{
+            height:250px;
+            }
+            </style>
         <script src="main.js"></script>
     </body>
     </html>
