--- a/versione2/index.html
+++ b/versione2/index.html
@@ -22,7 +22,7 @@
                     <input type="text" class="bg-light" placeholder="scegli la tua canzone preferita">
                 </div>
             </header>
-            <div class="container offset-1 col-10 text-white d-flex flex-wrap pt-5 justify-content-center">
+            <div class="container offset-1 col-10 text-white d-flex flex-wrap pt-5 justify-content-center text-center">
                 <ul v-for="disc in discs" class="d-flex col-4">
                     <li class="text-center">
                         <img :src="disc.poster" alt="">
@@ -41,9 +41,6 @@
             header,header > *{
                 background-color:black;
                
-            }
-            ul{
-                margin-left:-50px;
             }
             .iconSpotify{
                 font-size:200%;
